crates/pgls_pretty_print/tests/snapshots/multi/tests__int8_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/int8_60.sql
snapshot_kind: text
---
INSERT INTO int8_tbl (q1) VALUES ('      ');

INSERT INTO int8_tbl (q1) VALUES ('xxx');

INSERT INTO int8_tbl (q1)
VALUES ('3908203590239580293850293850329485');

INSERT INTO int8_tbl (q1)
VALUES ('-1204982019841029840928340329840934');

INSERT INTO int8_tbl (q1) VALUES ('- 123');

INSERT INTO int8_tbl (q1) VALUES ('  345     5');

INSERT INTO int8_tbl (q1) VALUES ('');

SELECT * FROM int8_tbl;

SELECT pg_input_is_valid('34', 'int8');

SELECT pg_input_is_valid('asdf', 'int8');

SELECT pg_input_is_valid('10000000000000000000', 'int8');

SELECT
  *
FROM
  pg_input_error_info(
  '10000000000000000000',
  'int8'
  );

SELECT * FROM int8_tbl WHERE q2 = 4567890123456789;

SELECT * FROM int8_tbl WHERE q2 <> 4567890123456789;

SELECT * FROM int8_tbl WHERE q2 < 4567890123456789;

SELECT * FROM int8_tbl WHERE q2 > 4567890123456789;

SELECT * FROM int8_tbl WHERE q2 <= 4567890123456789;

SELECT * FROM int8_tbl WHERE q2 >= 4567890123456789;

SELECT * FROM int8_tbl WHERE q2 = 456;

SELECT * FROM int8_tbl WHERE q2 <> 456;

SELECT * FROM int8_tbl WHERE q2 < 456;

SELECT * FROM int8_tbl WHERE q2 > 456;

SELECT * FROM int8_tbl WHERE q2 <= 456;

SELECT * FROM int8_tbl WHERE q2 >= 456;

SELECT * FROM int8_tbl WHERE 123 = q1;

SELECT * FROM int8_tbl WHERE 123 <> q1;

SELECT * FROM int8_tbl WHERE 123 < q1;

SELECT * FROM int8_tbl WHERE 123 > q1;

SELECT * FROM int8_tbl WHERE 123 <= q1;

SELECT * FROM int8_tbl WHERE 123 >= q1;

SELECT * FROM int8_tbl WHERE q2 = CAST('456' AS SMALLINT);

SELECT * FROM int8_tbl WHERE q2 <> CAST('456' AS SMALLINT);

SELECT * FROM int8_tbl WHERE q2 < CAST('456' AS SMALLINT);

SELECT * FROM int8_tbl WHERE q2 > CAST('456' AS SMALLINT);

SELECT * FROM int8_tbl WHERE q2 <= CAST('456' AS SMALLINT);

SELECT * FROM int8_tbl WHERE q2 >= CAST('456' AS SMALLINT);

SELECT * FROM int8_tbl WHERE CAST('123' AS SMALLINT) = q1;

SELECT * FROM int8_tbl WHERE CAST('123' AS SMALLINT) <> q1;

SELECT * FROM int8_tbl WHERE CAST('123' AS SMALLINT) < q1;

SELECT * FROM int8_tbl WHERE CAST('123' AS SMALLINT) > q1;

SELECT * FROM int8_tbl WHERE CAST('123' AS SMALLINT) <= q1;

SELECT * FROM int8_tbl WHERE CAST('123' AS SMALLINT) >= q1;

SELECT q1 AS plus, -q1 AS minus FROM int8_tbl;

SELECT q1, q2, q1 + q2 AS plus FROM int8_tbl;

SELECT q1, q2, q1 - q2 AS minus FROM int8_tbl;

SELECT q1, q2, q1 * q2 AS multiply FROM int8_tbl;

SELECT
  q1,
  q2,
  q1 * q2
  AS multiply
FROM
  int8_tbl
WHERE
  q1 <
  1000 OR
  q2 >
  0 AND
  q2 <
  1000;

SELECT
  q1,
  q2,
  q1 / q2
  AS divide,
  q1 % q2
  AS mod
FROM
  int8_tbl;

SELECT q1, float8(q1) FROM int8_tbl;

SELECT q2, float8(q2) FROM int8_tbl;

SELECT 37 + q1 AS plus4 FROM int8_tbl;

SELECT 37 - q1 AS minus4 FROM int8_tbl;

SELECT 2 * q1 AS "twice int4" FROM int8_tbl;

SELECT q1 * 2 AS "twice int4" FROM int8_tbl;

SELECT
  q1 + CAST(42
  AS INT)
  AS "8plus4",
  q1 - CAST(42
  AS INT)
  AS "8minus4",
  q1 * CAST(42
  AS INT)
  AS "8mul4",
  q1 / CAST(42
  AS INT)
  AS "8div4"
FROM
  int8_tbl;

SELECT
  CAST(246
  AS INT) + q1
  AS "4plus8",
  CAST(246
  AS INT) - q1
  AS "4minus8",
  CAST(246
  AS INT) * q1
  AS "4mul8",
  CAST(246
  AS INT) / q1
  AS "4div8"
FROM
  int8_tbl;

SELECT
  q1 + CAST(42
  AS SMALLINT)
  AS "8plus2",
  q1 - CAST(42
  AS SMALLINT)
  AS "8minus2",
  q1 * CAST(42
  AS SMALLINT)
  AS "8mul2",
  q1 / CAST(42
  AS SMALLINT)
  AS "8div2"
FROM
  int8_tbl;

SELECT
  CAST(246
  AS SMALLINT) + q1
  AS "2plus8",
  CAST(246
  AS SMALLINT) - q1
  AS "2minus8",
  CAST(246
  AS SMALLINT) * q1
  AS "2mul8",
  CAST(246
  AS SMALLINT) / q1
  AS "2div8"
FROM
  int8_tbl;

SELECT q2, abs(q2) FROM int8_tbl;

SELECT MIN(q1), MIN(q2) FROM int8_tbl;

SELECT MAX(q1), MAX(q2) FROM int8_tbl;

SELECT
  to_char(
  q1,
  '9G999G999G999G999G999'
  ),
  to_char(
  q2,
  '9,999,999,999,999,999'
  )
FROM
  int8_tbl;

SELECT
  to_char(
  q1,
  '9G999G999G999G999G999D999G999'
  ),
  to_char(
  q2,
  '9,999,999,999,999,999.999,999'
  )
FROM
  int8_tbl;

SELECT
  to_char(
  q1 * -1,
  '9999999999999999PR'
  ),
  to_char(
  q2 * -1,
  '9999999999999999.999PR'
  )
FROM
  int8_tbl;

SELECT
  to_char(
  q1 * -1,
  '9999999999999999S'
  ),
  to_char(
  q2 * -1,
  'S9999999999999999'
  )
FROM
  int8_tbl;

SELECT to_char(q2, 'MI9999999999999999') FROM int8_tbl;

SELECT to_char(q2, '9999999999999999PL') FROM int8_tbl;

SELECT to_char(q2, 'FMS9999999999999999') FROM int8_tbl;

SELECT to_char(q2, 'FM9999999999999999THPR') FROM int8_tbl;

SELECT to_char(q2, 'SG9999999999999999th') FROM int8_tbl;

SELECT to_char(q2, '0999999999999999') FROM int8_tbl;

SELECT to_char(q2, 'S0999999999999999') FROM int8_tbl;

SELECT to_char(q2, 'FM0999999999999999') FROM int8_tbl;

SELECT to_char(q2, 'FM9999999999999999.000') FROM int8_tbl;

SELECT to_char(q2, 'L9999999999999999.000') FROM int8_tbl;

SELECT to_char(q2, 'FM9999999999999999.999') FROM int8_tbl;

SELECT
  to_char(
  q2,
  'S 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 . 9 9 9'
  )
FROM
  int8_tbl;

SELECT
  to_char(
  q2,
  '99999 "text" 9999 "9999" 999 "\"text between quote marks\"" 9999'
  )
FROM
  int8_tbl;

SELECT to_char(q2, '999999SG9999999999') FROM int8_tbl;

SELECT to_char(q2, 'FMRN') FROM int8_tbl;

SELECT to_char(1234, '9.99EEEE');

SELECT to_char(CAST(1234 AS BIGINT), '9.99eeee');

SELECT to_char(-CAST(1234 AS BIGINT), '9.99eeee');

SELECT to_char(1234, '99999V99');

SELECT to_char(CAST(1234 AS BIGINT), '99999V99');

SELECT CAST('-9223372036854775808' AS BIGINT);

SELECT CAST('-9223372036854775809' AS BIGINT);

SELECT CAST('9223372036854775807' AS BIGINT);

SELECT CAST('9223372036854775808' AS BIGINT);

SELECT -CAST('-9223372036854775807' AS BIGINT);

SELECT -CAST('-9223372036854775808' AS BIGINT);

SELECT
  CAST(0
  AS BIGINT) - CAST('-9223372036854775808'
  AS BIGINT);

SELECT
  CAST('9223372036854775800'
  AS BIGINT) + CAST('9223372036854775800'
  AS BIGINT);

SELECT
  CAST('-9223372036854775800'
  AS BIGINT) + CAST('-9223372036854775800'
  AS BIGINT);

SELECT
  CAST('9223372036854775800'
  AS BIGINT) - CAST('-9223372036854775800'
  AS BIGINT);

SELECT
  CAST('-9223372036854775800'
  AS BIGINT) - CAST('9223372036854775800'
  AS BIGINT);

SELECT
  CAST('9223372036854775800'
  AS BIGINT) * CAST('9223372036854775800'
  AS BIGINT);

SELECT
  CAST('9223372036854775800'
  AS BIGINT) / CAST('0'
  AS BIGINT);

SELECT
  CAST('9223372036854775800'
  AS BIGINT) % CAST('0'
  AS BIGINT);

SELECT abs(CAST('-9223372036854775808' AS BIGINT));

SELECT
  CAST('9223372036854775800'
  AS BIGINT) + CAST('100'
  AS INT);

SELECT
  CAST('-9223372036854775800'
  AS BIGINT) - CAST('100'
  AS INT);

SELECT
  CAST('9223372036854775800'
  AS BIGINT) * CAST('100'
  AS INT);

SELECT
  CAST('100'
  AS INT) + CAST('9223372036854775800'
  AS BIGINT);

SELECT
  CAST('-100'
  AS INT) - CAST('9223372036854775800'
  AS BIGINT);

SELECT
  CAST('100'
  AS INT) * CAST('9223372036854775800'
  AS BIGINT);

SELECT
  CAST('9223372036854775800'
  AS BIGINT) + CAST('100'
  AS SMALLINT);

SELECT
  CAST('-9223372036854775800'
  AS BIGINT) - CAST('100'
  AS SMALLINT);

SELECT
  CAST('9223372036854775800'
  AS BIGINT) * CAST('100'
  AS SMALLINT);

SELECT
  CAST('-9223372036854775808'
  AS BIGINT) / CAST('0'
  AS SMALLINT);

SELECT
  CAST('100'
  AS SMALLINT) + CAST('9223372036854775800'
  AS BIGINT);

SELECT
  CAST('-100'
  AS SMALLINT) - CAST('9223372036854775800'
  AS BIGINT);

SELECT
  CAST('100'
  AS SMALLINT) * CAST('9223372036854775800'
  AS BIGINT);

SELECT CAST('100' AS SMALLINT) / CAST('0' AS BIGINT);

SELECT CAST(q1 AS INT) FROM int8_tbl WHERE q2 = 456;

SELECT CAST(q1 AS INT) FROM int8_tbl WHERE q2 <> 456;

SELECT CAST(q1 AS SMALLINT) FROM int8_tbl WHERE q2 = 456;

SELECT CAST(q1 AS SMALLINT) FROM int8_tbl WHERE q2 <> 456;

SELECT
  CAST(CAST('42'
  AS SMALLINT)
  AS BIGINT),
  CAST(CAST('-37'
  AS SMALLINT)
  AS BIGINT);

SELECT
  CAST(q1
  AS REAL),
  CAST(q2
  AS DOUBLE PRECISION)
FROM
  int8_tbl;

SELECT CAST(CAST('36854775807.0' AS REAL) AS BIGINT);

SELECT
  CAST(CAST('922337203685477580700.0'
  AS DOUBLE PRECISION)
  AS BIGINT);

SELECT CAST(q1 AS OID) FROM int8_tbl;

SELECT
  CAST(oid
  AS BIGINT)
FROM
  pg_class
WHERE
  relname =
  'pg_class';

SELECT
  q1,
  q2,
  q1 & q2
  AS "and",
  q1 | q2
  AS "or",
  q1 # q2
  AS xor,
  ~q1
  AS "not"
FROM
  int8_tbl;

SELECT q1, q1 << 2 AS shl, q1 >> 3 AS shr FROM int8_tbl;

SELECT
  *
FROM
  generate_series(
  CAST('+4567890123456789'
  AS BIGINT),
  CAST('+4567890123456799'
  AS BIGINT)
  );

SELECT
  *
FROM
  generate_series(
  CAST('+4567890123456789'
  AS BIGINT),
  CAST('+4567890123456799'
  AS BIGINT),
  0
  );

SELECT
  *
FROM
  generate_series(
  CAST('+4567890123456789'
  AS BIGINT),
  CAST('+4567890123456799'
  AS BIGINT),
  2
  );

SELECT CAST(-CAST(1 AS BIGINT) << 63 AS TEXT);

SELECT CAST((-CAST(1 AS BIGINT) << 63) + 1 AS TEXT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) * CAST(-1
  AS BIGINT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) / CAST(-1
  AS BIGINT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) % CAST(-1
  AS BIGINT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) * CAST(-1
  AS INT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) / CAST(-1
  AS INT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) % CAST(-1
  AS INT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) * CAST(-1
  AS SMALLINT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) / CAST(-1
  AS SMALLINT);

SELECT
  CAST(-9223372036854775808
  AS BIGINT) % CAST(-1
  AS SMALLINT);

SELECT
  x,
  CAST(x
  AS BIGINT)
  AS int8_value
FROM
  (VALUES (-CAST(2.5
  AS DOUBLE PRECISION)),
  (-CAST(1.5
  AS DOUBLE PRECISION)),
  (-CAST(0.5
  AS DOUBLE PRECISION)),
  (CAST(0.0
  AS DOUBLE PRECISION)),
  (CAST(0.5
  AS DOUBLE PRECISION)),
  (CAST(1.5
  AS DOUBLE PRECISION)),
  (CAST(2.5
  AS DOUBLE PRECISION))) AS t (x);

SELECT
  x,
  CAST(x
  AS BIGINT)
  AS int8_value
FROM
  (VALUES (-CAST(2.5
  AS NUMERIC)),
  (-CAST(1.5
  AS NUMERIC)),
  (-CAST(0.5
  AS NUMERIC)),
  (CAST(0.0
  AS NUMERIC)),
  (CAST(0.5
  AS NUMERIC)),
  (CAST(1.5
  AS NUMERIC)),
  (CAST(2.5
  AS NUMERIC))) AS t (x);

SELECT
  a,
  b,
  gcd(
  a,
  b
  ),
  gcd(
  a,
  -b
  ),
  gcd(
  b,
  a
  ),
  gcd(
  -b,
  a
  )
FROM
  (VALUES (CAST(0
  AS BIGINT),
  CAST(0
  AS BIGINT)),
  (CAST(0
  AS BIGINT),
  CAST(29893644334
  AS BIGINT)),
  (CAST(288484263558
  AS BIGINT),
  CAST(29893644334
  AS BIGINT)),
  (-CAST(288484263558
  AS BIGINT),
  CAST(29893644334
  AS BIGINT)),
  (CAST(-9223372036854775808
  AS BIGINT),
  CAST(1
  AS BIGINT)),
  (CAST(-9223372036854775808
  AS BIGINT),
  CAST(9223372036854775807
  AS BIGINT)),
  (CAST(-9223372036854775808
  AS BIGINT),
  CAST(4611686018427387904
  AS BIGINT))) AS v (a,
  b);

SELECT
  gcd(
  CAST(-9223372036854775808
  AS BIGINT),
  CAST(0
  AS BIGINT)
  );

SELECT
  gcd(
  CAST(-9223372036854775808
  AS BIGINT),
  CAST(-9223372036854775808
  AS BIGINT)
  );

SELECT
  a,
  b,
  lcm(
  a,
  b
  ),
  lcm(
  a,
  -b
  ),
  lcm(
  b,
  a
  ),
  lcm(
  -b,
  a
  )
FROM
  (VALUES (CAST(0
  AS BIGINT),
  CAST(0
  AS BIGINT)),
  (CAST(0
  AS BIGINT),
  CAST(29893644334
  AS BIGINT)),
  (CAST(29893644334
  AS BIGINT),
  CAST(29893644334
  AS BIGINT)),
  (CAST(288484263558
  AS BIGINT),
  CAST(29893644334
  AS BIGINT)),
  (-CAST(288484263558
  AS BIGINT),
  CAST(29893644334
  AS BIGINT)),
  (CAST(-9223372036854775808
  AS BIGINT),
  CAST(0
  AS BIGINT))) AS v (a,
  b);

SELECT
  lcm(
  CAST(-9223372036854775808
  AS BIGINT),
  CAST(1
  AS BIGINT)
  );

SELECT
  lcm(
  CAST(9223372036854775807
  AS BIGINT),
  CAST(9223372036854775806
  AS BIGINT)
  );

SELECT CAST('0b100101' AS BIGINT);

SELECT CAST('0o273' AS BIGINT);

SELECT CAST('0x42F' AS BIGINT);

SELECT CAST('0b' AS BIGINT);

SELECT CAST('0o' AS BIGINT);

SELECT CAST('0x' AS BIGINT);

SELECT
  CAST('0b111111111111111111111111111111111111111111111111111111111111111'
  AS BIGINT);

SELECT
  CAST('0b1000000000000000000000000000000000000000000000000000000000000000'
  AS BIGINT);

SELECT CAST('0o777777777777777777777' AS BIGINT);

SELECT CAST('0o1000000000000000000000' AS BIGINT);

SELECT CAST('0x7FFFFFFFFFFFFFFF' AS BIGINT);

SELECT CAST('0x8000000000000000' AS BIGINT);

SELECT
  CAST('-0b1000000000000000000000000000000000000000000000000000000000000000'
  AS BIGINT);

SELECT
  CAST('-0b1000000000000000000000000000000000000000000000000000000000000001'
  AS BIGINT);

SELECT CAST('-0o1000000000000000000000' AS BIGINT);

SELECT CAST('-0o1000000000000000000001' AS BIGINT);

SELECT CAST('-0x8000000000000000' AS BIGINT);

SELECT CAST('-0x8000000000000001' AS BIGINT);

SELECT CAST('1_000_000' AS BIGINT);

SELECT CAST('1_2_3' AS BIGINT);

SELECT CAST('0x1EEE_FFFF' AS BIGINT);

SELECT CAST('0o2_73' AS BIGINT);

SELECT CAST('0b_10_0101' AS BIGINT);

SELECT CAST('_100' AS BIGINT);

SELECT CAST('100_' AS BIGINT);

SELECT CAST('100__000' AS BIGINT);
